# shapely

./: README.org  __init__.py  pyproject.toml  shapely.py
shapely/: shapely.py
src/shapely/: __init__.py  shape.py  shapely.py
tests/: test_shape.py
