[tool.poetry]
name = "shapely"
version = "0.1.0"
description = "Reveal the shapes of nested collections, including tensors"
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = ">=20.3.0"

[tool.poetry.dev-dependencies]
mypy = ">=0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
