[tool.poetry]
name = "shapely"
version = "0.1.0"
description = "Reveal the shapes of nested collections, including tensors"
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = ">=0.790"
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
